[package]
name = "bevy-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"

# enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
